<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_cafe"
    tools:ignore="ExtraText">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/soup"
        android:backgroundTint="@color/browser_actions_bg_grey"
        android:contentDescription="@string/logo"
        tools:ignore="PrivateResource,UnusedAttribute" />

    <TextView
        android:id="@+id/go4"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/go4"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="100dp"
        android:text="@string/find_a_nice_restaurant_and_invite_your_coworkers_for_launch"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="11sp"
        android:textStyle="bold"
        tools:ignore="PrivateResource,TextContrastCheck" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_fb"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="#2962FF"
        android:drawableLeft="@drawable/facebook2"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/white"
        android:textSize="11sp"
        tools:ignore="RtlHardcoded,SmallSp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:padding="7dp"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        android:textSize="11sp"
        tools:ignore="RtlHardcoded,SmallSp,TouchTargetSizeCheck"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/githubId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="470dp"
        android:hint="@string/enter_your_email_associated_with_github"
        android:padding="8dp"
        android:textAlignment="center"
        android:inputType="none"
        android:autofillHints="" />

    <Button
        android:id="@+id/githubLogin"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/github"
        android:drawablePadding="7dp"
        android:text="@string/sign_n_with_github"
        android:textColor="@color/black"
        android:textSize="11sp" />




</RelativeLayout>